<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewNewQuestion"
        android:layout_width="234dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:text="@string/add_question"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNewQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewChoosedCategory"
        android:layout_width="150dp"
        android:layout_height="57dp"
        android:textSize="24dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:text="@string/choosed_category"
        app:layout_constraintBottom_toTopOf="@+id/editTextNewQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextNewQuestion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/new_question"
        app:layout_constraintBottom_toTopOf="@+id/textViewNewAnswers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNewQuestion" />

    <TextView
        android:id="@+id/textViewNewAnswers"
        android:layout_width="371dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/answers"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNewAnswer1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewQuestion" />

    <EditText
        android:id="@+id/editTextNewAnswer1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/new_answer_1"
        app:layout_constraintBottom_toTopOf="@+id/editTextNewAnswer2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNewAnswers" />

    <EditText
        android:id="@+id/editTextNewAnswer2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/new_answer_2"
        app:layout_constraintBottom_toTopOf="@+id/editTextNewAnswer3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewAnswer1" />

    <EditText
        android:id="@+id/editTextNewAnswer3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/new_answer_3"
        app:layout_constraintBottom_toTopOf="@+id/editTextNewAnswer4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewAnswer2" />

    <EditText
        android:id="@+id/editTextNewAnswer4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/new_answer_4"
        app:layout_constraintBottom_toTopOf="@+id/textViewChooseGoodAnswer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewAnswer3" />

    <TextView
        android:id="@+id/textViewChooseGoodAnswer"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:textSize="24dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/choose_good_answer"
        app:layout_constraintBottom_toTopOf="@+id/spinnerGoodAnswer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewAnswer4" />

    <Spinner
        android:id="@+id/spinnerGoodAnswer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonValidateNewQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewChooseGoodAnswer" />

    <Button
        android:id="@+id/buttonValidateNewQuestion"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/validate_question"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerGoodAnswer" />
</androidx.constraintlayout.widget.ConstraintLayout>