<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewCreateAccount"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:gravity="center"
        android:text="@string/create_account"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="152dp"
        android:layout_height="77dp"
        android:text="@string/create_account_button"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="438dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextUsernameCreateAccount"
        android:layout_width="228dp"
        android:layout_height="59dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/username"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="186dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextPasswordCreateAccount"
        android:layout_width="228dp"
        android:layout_height="59dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="267dp"
        android:text="@string/password"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextConfirmPasswordCreateAccount"
        android:layout_width="228dp"
        android:layout_height="59dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="336dp"
        android:text="@string/password"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>