<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewSelectCategory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:text="@string/select_category"
        app:layout_constraintBottom_toTopOf="@+id/spinnerSelectCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerSelectCategory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="144dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlaySelectCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSelectCategory" />

    <Button
        android:id="@+id/buttonPlaySelectCategory"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:text="@string/lets_play"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddQuestionSelectCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSelectCategory" />

    <Button
        android:id="@+id/buttonAddQuestionSelectCategory"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginBottom="244dp"
        android:text="@string/add_question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlaySelectCategory" />
</androidx.constraintlayout.widget.ConstraintLayout>